--- a/static/styles.css
+++ b/static/styles.css
@@ -15,14 +15,84 @@ body{
     color: #0f0f0f;
     /*position: relative;
     padding-bottom: 3em;
-    min-height: 100vh;*/
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh;*/
 }
 
- /*logo macowins*/
+footer{
+    background-color: #442f76;
+    padding: 1em 0;
+    text-align: center;
+    /*position: absolute;
+    bottom: 0;
+    width: 100%;
+    */
+    margin-top: auto
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 0rem 0;
+}
+
+.social li{
+    margin: 0 10px;
+}
+
+.social a{
+    text-decoration: none;
+    color: #fff;
+}
+
+.social a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+.social a:hover i{
+    color: darkblue;
+}
+
+.footer-bottom{
+    width: 100vh;
+    padding: 0px 0;
+    text-align: center;
+}
+
+
+.footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
+
+.footer-bottom span{
+    text-transform: uppercase;
+    color: #bcb6d0;
+    opacity: .4;
+    font-weight: 200;
+}
+
+
 .logo-cabecera img{
+    margin: 0 100px;
     height: 80px;
     width: 90px;
     /*hover logo*/
@@ -45,7 +115,11 @@ header .logo-cabecera img:hover{
     justify-content: space-between;
     align-items: center;
     height: 90px;
-    padding: 5px 10%;
+    padding: 16px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     box-shadow: 0 3px 10px -5px #4d25ac;
 }
 
@@ -62,7 +136,20 @@ header .logo-cabecera img:hover{
 
 
 main{
-    margin: 20px 10px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+h1{
+    font-size: 36px;
+    text-align: center;
+}
+
+h2{
+    font-size: 28px;
+}
+h3{
+    text-align: center;
 }
 
 h1{
@@ -103,18 +190,7 @@ li.menu-inicio:hover{
 
 /*estilos del footer*/
 
-footer{
-    background-color: #442f76;
-    padding: 1em 0;
-    text-align: center;
-    /*position: absolute;
-    bottom: 0;
-    width: 100%;
-    */
-    margin-top: auto
 
-
-}
 
 .icono-contacto{
     width: 30px;
@@ -122,8 +198,7 @@ footer{
 }
 
 p{
-    margin: 50px 10px 16px;
-    text-align: center;
+    margin: 16px;
 }
 
 /*estilos del footer: iconos ig fb linkedin*/
@@ -213,12 +288,61 @@ input{
 
 }
 
+/*lista-catalogo de productos*/
+
+.product img{
+    width: 250px;
+    margin: 50px;
+}
+
+
+.card{
+    
+    margin-left: 100px;
+    width: 350px;
+    border-radius: 4px;
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(117, 187, 12, 0.12), 2px 2px 2px rgba(61, 25, 222, 0.24);
+}
+
+.productos{
+    display: flex;
+
+    margin: 50px;
+    height: 50px;
+    text-align: center;
+}
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 3rem 2rem;
+    padding-top: 100px;
+}
+
+.container .title{
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.container .products-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
+}
+
+
+
+
+
+
 /*.container{
     width: 85%;
     max-width: 850px;
     margin: 20px;
 }
-*/
+
 .pie-pagina{
     font-style: italic;
     color: #fff;
@@ -234,6 +358,6 @@ input{
     justify-content: end;
 }
 
-/*section.juntos{
+section.juntos{
     flex-direction: row;
 }*/
