--- a/templates/lista_ventas.html
+++ b/templates/lista_ventas.html
@@ -75,53 +75,82 @@
                 
                  
                 <article>
-                    <p>Lista de ventas aqui</p>
+                    <p>Lista de ventas</p>
     
                     
                 </article>
-            
+            <!--Tabla de ventas-->
+            <div class="contenido" >
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Producto </th>
+                            <th> Cantidad vendida </th>
+                            <th> Precio </th>
+                            <th> Fecha </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Remera</td>
+                            <td>5</td>
+                            <td>$4000</td>
+                            <td>24/11/2022</td>
+
+                        </tr>
+                        <tr>
+                            <td>Camisa</td>
+                            <td>4</td>
+                            <td>$5000</td>
+                            <td>20/11/2022</td>
+                            
+                        </tr>
+                        <tr>
+                            <td>Pantalon</td>
+                            <td>7</td>
+                            <td>$5000</td>
+                            <td>24/11/2022</td>
+                            
+                        </tr>
+                        <tr>
+                            <td>Corbata</td>
+                            <td>10</td>
+                            <td>$3000</td>
+                            <td>15/11/2022</td>
+                            
+                        </tr>
+                    </tbody>
+                </table>
+
+            </div>
+                
         </main>
         
         
         <footer>
-            <section class="juntos">
-                <!---<article>
-                    <p>Sobre Nosotros</p>
-                    <p>Contactenos</p>
-                    <p>Ayuda</p>
-                </article> --->
-                    <ul class="redes-contacto">
-                        <li>
-                            <a href="mailto:macowins.com" target="_blank" aria-label="enviame un mail">
-                                <img src="../static/img/web-icono.png" alt="web" class="icono-contacto">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/" target="_blank" aria-label="ir a instagram">
-                                <img src="../static/img/ig-icono.png" class="icono-contacto">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://es-la.facebook.com/" target="_blank" aria-label="ir a facebook">
-                                <img src="../static/img/facebook-icono.png" alt="fb" class="icono-contacto">
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://ar.linkedin.com/" target="_blank" aria-label="ir a linkedin"> 
-                                <img src="/static/img/linkedin-icono.png" alt="linkedin" class="icono-contacto">
-                            </a>
-                        </li>
             
-                    </ul>
-                </section>
-                <article class="pie-pagina">
-                    <p> <small> Copyright todos los derechos reservados</small></p>
-    
-                    <p> <small> Página creada por 2 Diseños Software </small></p>
-                </article>
-    
-        
+            <div class="footer-content">
             
+
+                <ul class="social">
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i> </a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
+                </ul>
+            
+            <div class="footer-bottom">
+                <p>Copyright &copy;2022 Macowins designed by <span> 2diseños</span></p>
+            </div>
+    
+    
+                
+                
+                
+                
+            </div>
+
+
         </footer>
 </body>
 </html>
