--- a/static/styles.css
+++ b/static/styles.css
@@ -13,6 +13,7 @@ body{
     line-height: 1.2;
     background-color: #fff;
     color: #0f0f0f;
+
     /*position: relative;
     padding-bottom: 3em;
     min-height: 100vh;
@@ -361,3 +362,146 @@ input{
 section.juntos{
     flex-direction: row;
 }*/
+
+/* borde de la tabla*/
+.contenido {
+   
+    border: solid 1px rgba(148, 48, 219, 0.3)
+}
+
+table  {
+   color: #0f0f0f; 
+   font-size: 14px;
+   table-layout: fixed;
+   border-collapse: collapse;
+   
+}
+thead{
+    background-color: #bcb6d0;
+}
+
+th{
+    padding: 20px 15px ;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+td {
+    padding: 15px;
+    border-bottom: solid 1 px rgba(148, 48, 219, 0.3);
+}
+tbody tr {
+    cursor: pointer ;
+}
+tbody tr:hover {
+    background: rgba(148, 48, 219, 0.3); 
+     
+}
+
+/* detalles de la carta*/
+
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+    height: 380px; 
+    background-color: #b4accc;
+    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.25); 
+    overflow: hidden;
+}
+.card.ingBox {
+    position: relative; 
+    min-width: 300px;
+    width: 300px; 
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    } 
+     
+.card:hover .imgBox{
+    transform: rotate(-35deg);
+    }
+
+.card .imgBox img{
+     width: 85%;
+    }
+
+.card .detalle{
+    position: relative; 
+    min-width: 300px; 
+    background:  rgba(148, 48, 219, 0.3); 
+    display: flex; 
+    flex-direction: column;
+    justify-content: space-between; 
+    width: 100%; 
+    height: 100%; 
+    padding: 20px;
+    color: #fff;
+    }
+    .card .detalle::before { 
+        content:"";
+        position: absolute;
+        left:0;
+        width: 0; height: 0;
+        border-bottom: 10px solid transparent; 
+        border-top: 10px solid transparent; 
+        border-left: 10px solid #efff;
+    }
+
+.card .detalle .title small {
+        font-weight: 200;
+        font-size: 0.8em;
+    }
+
+.card .detalle h4{
+        font-size: 0.9em;
+    }
+
+.card .detalle .description p { 
+        font-size: 0.8em; font-weight: 200;
+    }
+
+ .card .detalle .talle ul {
+    display: flex; 
+    width: 100%;
+    justify-content: space-between;
+    }
+.card .detalle .talle ul li {
+
+    list-style: none; 
+    display: flex; 
+    Justify-content: center; 
+    align-items: center; 
+    font-size: 0.8em; 
+    border: solid 1px #efff; 
+    padding: 0.6em;
+    }
+        
+.card .detalle .talle ul li:hover{
+    background-color: #fff;
+    color: #b44be9;
+    }
+
+.card .detalle .comprar {
+    display: flex; 
+    Justify-content: space-between; 
+    align-items: center;
+
+    }
+
+.card .detalle .comprar.precio { 
+    font-size: 1.6em;
+
+}
+
+.card .detalle .comprar .boton {
+    background: offf; 
+    padding: 0.5em 0.8em; 
+    text-transform: uppercase;
+}
+.card .detalle .comprar .boton a {
+    text-decoration: none;
+    color: #b44be9;
+}
