--- a/static/styles.css
+++ b/static/styles.css
@@ -151,11 +151,9 @@ h2{
 }
 h3{
     text-align: center;
+    margin-top: -10px;
 }
 
-h1{
-    margin: 30px 15px;
-}
 
 /*saca los puntos de la lista del menu y otras*/
 ul{
@@ -294,6 +292,8 @@ input{
 .product img{
     width: 250px;
     margin: 50px;
+    margin-bottom: 1px;
+    margin-top: 20px;
 }
 
 
@@ -303,7 +303,7 @@ input{
     width: 350px;
     border-radius: 4px;
     background-color: white;
-    box-shadow: 0 1px 3px rgba(117, 187, 12, 0.12), 2px 2px 2px rgba(61, 25, 222, 0.24);
+    box-shadow: 0 0px 3px 1px rgb(12 149 187 / 12%), 0px 2px 2px rgb(61 25 222 / 24%);
 }
 
 .productos{
@@ -317,14 +317,16 @@ input{
 .container{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 3rem 2rem;
-    padding-top: 100px;
+    padding: 6rem 2rem;
+    padding-top: 60px;
 }
 
 .container .title{
     font-size: 2.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     text-align: center;
+    font-family: auto;
+    color: #2a2a34;
 }
 
 .container .products-container{
@@ -333,10 +335,66 @@ input{
     gap: 2rem;
 }
 
+.card .pestaña_detalle{
+    text-align: center;
+}
 
+.precio{
+    margin: 0px;
+    margin-bottom: 6px;
+}
 
+.varios_buscadores{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 115px;
+    margin: -11px;
+    margin-left: 6px;
+    margin-bottom: -150px;
+}
 
+section#inicio {
+    justify-content: space-around;
+    flex-direction: column;
+}
 
+.buscador_esp{
+    color: #000;
+    outline: none;
+    border: 1px solid silver;
+    border-radius: 30px;
+    transition: all 0.6s ease;
+
+}
+
+i .fa fa-search icono{
+    position: absolute;
+    width: 55px;
+    height: 55px;
+    top: 0;
+    right: 0;
+    line-height: 55px;
+    text-align: center;
+    background: #3539ad;
+    color: white;
+    font-size: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.productos_enlace_interno{
+    text-align: end;
+    font-family: auto;
+    font-size: 110px;
+}
+
+.esto{
+    text-align: end;
+    font-family: auto;
+    font-size: 24px;
+}
 
 /*.container{
     width: 85%;
