--- a/templates/lista_ventas.html
+++ b/templates/lista_ventas.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="../static/styles.css">
     <link rel="shortcut icon" href="/static/img/logo-icon.png">
     <script src="https://kit.fontawesome.com/71ed577500.js" crossorigin="anonymous"></script>
-    <title>Tp5 prueba Macowins</title>
+    <title>Home</title>
 </head>
 <body>
     <header class="header">
@@ -33,52 +32,20 @@
                         <a href="#inicio">Inicio</a>
                     </li>
                     <li class="menu-inicio">
-                        <a href="sobre-nos">Sobre Nosotros</a>
+                        <a href="sobre-nos">Acerca de</a>
                     </li>
                     <li class="menu-inicio">
-                        <a href="#contacto">Contacto</a>
+                        <a href="#ayuda">Ayuda</a>
                     </li>
-            <!-- buscador  
             
-                    <nav class="buscar">
-                        <input type="text" placeholder="Buscar" required>
-                        <div class="btn">
-                            <i class="fa fa-search icono"></i>
-                    
-                        </div>
-                    
-                    </nav>-->
                 </ul>
             </nav>
     
     
     
         </header>
-            
-        
-        
         
         <main>
-            
-            <!--
-                <nav>
-                    
-                </nav> -->
-    
-                <nav class="lista-ventas">
-                    <ul>
-                        <li>
-                            <a class="ver-ventas" href="#ver-lista-ventas">Ver todos los productos</a>
-                        </li>
-                    </ul>
-                </nav>
-                
-                 
-                <article>
-                    <p>Lista de ventas</p>
-    
-                    
-                </article>
             <!--Tabla de ventas-->
             <div class="contenido" >
                 <table>
@@ -123,7 +90,6 @@
                 </table>
 
             </div>
-                
         </main>
         
         
@@ -142,15 +108,12 @@
             <div class="footer-bottom">
                 <p>Copyright &copy;2022 Macowins designed by <span> 2diseños</span></p>
             </div>
-    
-    
-                
-                
-                
+
                 
             </div>
-
-
+    
+        
+            
         </footer>
 </body>
 </html>
