--- a/templates/lista_productos.html
+++ b/templates/lista_productos.html
@@ -29,7 +29,7 @@
             <nav>
                 <ul id="menu-principal">
                     <li class="menu-inicio">
-                        <a href="#inicio">Inicio</a>
+                        <a href="{{ url_for('raiz') }}">Inicio</a>
                     </li>
                     <li class="menu-inicio">
                         <a href="sobre-nos">Acerca de</a>
@@ -45,9 +45,7 @@
     
         </header>
             
-        
-        
-        
+
         <main>
             
             <section>
@@ -77,7 +75,7 @@
 
                             <section class="pestaña_detalle">
                                 <h3>Camisa de Cambray </h3>
-                                <p class="precio">$4999,99</p>
+                                <p class="precio">precio : {{precio}}</p>
                                 <a href="{{ url_for('detalles')}}" class="detalle-enlace-interno">Detalle de este producto</a>
                             </section>
                         </div>
@@ -119,7 +117,11 @@
 
             </section>
     
-                
+            {% for producto in lista %}
+                <div>
+                    <span>Nombre</span>{{producto.nombre}}
+                </div>
+            {%endfor%}  
             
         </main>
         
