--- a/static/styles.css
+++ b/static/styles.css
@@ -26,7 +26,7 @@ footer{
     background-color: #442f76;
     padding: 1em 0;
     text-align: center;
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     width: 100%;
     margin-top: auto
