--- a/templates/lista_productos.html
+++ b/templates/lista_productos.html
@@ -55,10 +55,11 @@
             <section class="container"> <!--catalogo-->
                 <p class="title"> Catálogo de productos</p>
                 <div class="products-container">
+                    <!---
                     <div class="product">
                         <div class="card">
                             <img src="../static/img/producto-catalogo.jpg" alt="Imagen de camisa">
-                            <!--<span>Nombre: </span>lista {{ lista }}!-->
+                            <span>Nombre: </span>lista {{ lista }}!
                             <section class="pestaña_detalle">
                                 <h3>Camisa Oxford</h3>
                                 <p class="precio">$4999,99</p>
@@ -88,7 +89,7 @@
                             
                             <section class="pestaña_detalle">
                                 <h3>Camisa de Mao</h3>
-                                <p class="precio">$4999,99</p>
+                                <p class="precio"> {{precio}}</p>
                                 
                                 <a href="{{ url_for('detalles')}}" class="detalle-enlace-interno">Detalle de este producto</a>
                               </section>
@@ -106,7 +107,7 @@
                                 <a href="{{ url_for('detalles')}}" class="detalle-enlace-interno">Detalle de este producto</a>
                               </section>
                             
-                            <!--<span>Categoria: </span> -->
+                            <span>Categoria: </span> 
                             
                         </div>
                             
@@ -116,12 +117,14 @@
                 </div>
 
             </section>
-    
-            {% for producto in lista %}
-                <div>
-                    <span>Nombre</span>{{producto.nombre}}
-                </div>
-            {%endfor%}  
+        --> <p> hola</p>
+        {% for producto in productos_all %}
+        <div>
+            <li>
+                <a href="{{ url_for('products') }}"> {{ producto.nombre }}</a>
+            </li>
+        </div>
+    {%endfor%} 
             
         </main>
         
