--- a/templates/home.html
+++ b/templates/home.html
@@ -115,17 +115,7 @@
 
             </section>
 
-            <section>
-                <p> hola </p>
-                
-                {% for producto in productos_all %}
-                    <div>
-                        <li>
-                            <a href="{{ url_for('products') }}"> {{ producto.nombre }}</a>
-                        </li>
-                    </div>
-                {%endfor%} 
-            </section>
+            <!--desde aqui navego a la otra pagina /Productos/ pero no aparecen los productos en sucursal-->
             
                 
             
