--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
                         <a href="sobre-nos">Acerca de</a>
                     </li>
                     <li class="menu-inicio">
-                        <a href="#ayuda">Ayuda</a>
+                        <a href="#ayuda">Faqs</a>
                     </li>
             
                 </ul>
