--- a/templates/lista_ventas.html
+++ b/templates/lista_ventas.html
@@ -43,6 +43,17 @@
         </header>
         
         <main>
+            
+            <h1 class="arriba">Lista de ventas</h1>
+
+
+            <form class="fecha_filtro" action="filtro">
+                <label> Desde </label>
+                <input type="date">
+                <label> hasta</label>
+                <input type="date">
+            </form>
+
             <!--Tabla de ventas-->
             <div class="contenido" >
                 <table>
@@ -87,6 +98,7 @@
                 </table>
 
             </div>
+
         </main>
         
         
