--- a/static/styles.css
+++ b/static/styles.css
@@ -296,7 +296,7 @@ input{
 .container{
     max-width: 1200px;
     margin: 0 auto;
-    padding: 6rem 2rem;
+    padding: 3rem 2rem;
     padding-top: 60px;
 }
 
@@ -317,6 +317,8 @@ input{
 .card .pestaña_detalle{
     text-align: center;
     line-height: 4px;
+    margin: 0px;
+    padding-bottom: 18px;
 }
 
 .precio{
@@ -530,12 +532,13 @@ tbody tr:hover {
 }
 
 .detalle {
-    width: 250px;
-    margin: 50px;
 
+    width: 226px;
+    margin: 50px;
     display: flex;
-    height: 500px;
     text-align: center;
+    flex-direction: column;
+    margin-bottom: 20px;
 
 }
    
@@ -552,8 +555,9 @@ tbody tr:hover {
     
 .secciones { 
     display: flex; 
-    align-items: center; 
-    padding: 40px;
+    align-items: center;
+    padding: 0px;
+    text-align: center;
 }
 
 .arriba{
@@ -565,4 +569,20 @@ tbody tr:hover {
     margin: 10px;
     margin-bottom: 90px;
     margin-left: 3px;
+}
+
+.ads{
+    width: 1200px;
+    margin: 28px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+}
+
+.detalle_producto{
+    font-size: 24px;
+}
+
+.cajita_detalle{
+    margin: 2px;
+    margin-top: 34px;
 }
