--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -48,29 +48,32 @@
         
         
         <main>
-            <p>{{productos}}</p>
-            <p>{{busqueda}}</p>
-            <p>{{nombre}}</p>
+            
              <div class="temas">
                 <div class="=articulos">
                     <div class="secciones">
-                        <div>
-                            {% for producto in lista %}
-                            <div>
-                                <p>hola {{producto.nombre}}</p>
-                                <p>hola que onda</p>
+                        <div class="cajita_detalle">
+                            <div class="detalle"><img src="../static/img/producto-catalogo.jpg " alt="Imagen de camisa"></div>
+
+                            {% for producto in productos %}
+                            <div class="detalle_producto">
+                                <p>{{producto.nombre}}</p>
+                                <p>{{producto.categoria[0]}}</p>
+                                <p>{{producto.precio}}</p>
                             </div>
                         </div>
                             {% endfor %}
                             
                         </div>
-                        <div class="detalle"><img src="../static/img/producto-catalogo.jpg" alt="Imagen de camisa"></div>
-
+                        
                     </div>
+                    
+
+             
                 </div>
              </div>
     
-                
+             
             
         </main>
         
